--- a/src/home.html
+++ b/src/home.html
@@ -67,8 +67,8 @@
 										<h4>Следующий матч</h4>
 									</div>
 									<div class="main__right-table">
-										<div class="main__right-info text-16">
-											<p>26 июня 2023 17:00 Стадион «Труд»</p>
+										<div class="main__right-info text-16 anons">
+											<p><span>26 июня 2023&emsp; 17:00</span><span>Стадион «Труд»&emsp;&emsp;</span></p>
 										</div>
 										<div class="main__right-commands">
 											<div class="main__right-team text-20 bold">
@@ -79,7 +79,7 @@
 												<p>х</p>
 											</div>
 											<div class="main__right-team text-20 bold">
-												<img src="img/main/zenit.png" alt="">
+												<img src="img/main/zenit.png" alt="" class="zenit">
 												<p>Зенит Пенза</p>
 											</div>
 										</div>
@@ -149,7 +149,7 @@
 				<div class="matches__container">
 					<div class="matches__title">
 						<h2>Ближайшие матчи</h2>
-						<a href="arhiv.html" class="text-24">Все матчи</a>
+						<a href="games.html" class="text-24">Все матчи</a>
 					</div>
 					<div class="matches__body">
 						<div class="matches__swiper">
