--- a/src/kvant.html
+++ b/src/kvant.html
@@ -17,7 +17,7 @@
 				</div>
 				<h3>Вратари</h3>
 				<ul class="kvant__body">
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/1.png" alt="">
 						</div>
@@ -31,7 +31,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/2.png" alt="">
 						</div>
@@ -48,7 +48,7 @@
 				</ul>
 				<h3>Защитники</h3>
 				<ul class="kvant__body">
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/3.png" alt="">
 						</div>
@@ -62,7 +62,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/4.png" alt="">
 						</div>
@@ -76,7 +76,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/5.png" alt="">
 						</div>
@@ -90,7 +90,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/6.png" alt="">
 						</div>
@@ -104,7 +104,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/7.png" alt="">
 						</div>
@@ -118,7 +118,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/8.png" alt="">
 						</div>
@@ -132,7 +132,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/9.png" alt="">
 						</div>
@@ -146,7 +146,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/10.png" alt="">
 						</div>
@@ -160,7 +160,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/11.png" alt="">
 						</div>
@@ -174,7 +174,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/12.png" alt="">
 						</div>
@@ -188,7 +188,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/13.png" alt="">
 						</div>
@@ -205,7 +205,7 @@
 				</ul>
 				<h3>Полузащитники</h3>
 				<ul class="kvant__body">
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/14.png" alt="">
 						</div>
@@ -219,7 +219,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/15.png" alt="">
 						</div>
@@ -233,7 +233,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/16.png" alt="">
 						</div>
@@ -247,7 +247,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/17.png" alt="">
 						</div>
@@ -261,7 +261,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/18.png" alt="">
 						</div>
@@ -275,7 +275,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/19.png" alt="">
 						</div>
@@ -289,7 +289,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/20.png" alt="">
 						</div>
@@ -306,7 +306,7 @@
 				</ul>
 				<h3>Нападающие</h3>
 				<ul class="kvant__body">
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/21.png" alt="">
 						</div>
@@ -320,7 +320,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/22.png" alt="">
 						</div>
@@ -334,7 +334,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/23.png" alt="">
 						</div>
@@ -348,7 +348,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/24.png" alt="">
 						</div>
@@ -362,7 +362,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="kvant__item players__item">
+					<li class="kvant__item players__item" data-popup="#popup__players-1">
 						<div class="players__image -ibg">
 							<img src="img/kvant/25.png" alt="">
 						</div>
@@ -377,6 +377,38 @@
 						</div>
 					</li>
 				</ul>
+			</div>
+			<div id="popup__players-1" aria-hidden="true" class="popup">
+				<div class="popup__wrapper">
+					<div class="popup__content">
+						<button data-close type="button" class="popup__close"></button>
+						<div class="popup__players-body">
+							<div class="popup__players-top">
+								<div class="popup__players-left -ibg">
+									<img src="img/players/1.png" alt="">
+								</div>
+								<div class="popup__players-right">
+									<div class="popup__players-name">
+										<h4>Софин Максим Павлович</h4>
+										<h3>29</h3>
+									</div>
+									<div class="popup__players-info">
+										<p class="text-20"><span class="text-20 bold">Амплуа: </span>защитник</p>
+										<p class="text-20"><span class="text-20 bold">Дата рождения: 
+											</span>29 октября 2005 г.</p>
+										<p class="text-20"><span class="text-20 bold">Рост: </span>176 см</p>
+										<p class="text-20"><span class="text-20 bold">Вес: </span>60 кг</p>
+										<p class="text-20"><span class="text-20 bold">Заявлен: </span>с 05 августа 2022 г.</p>
+										<p class="text-20"><span class="text-20 bold">Время на поле: </span>21 мин.</p>
+									</div>
+								</div>
+							</div>
+							<div class="popup__players-bottom">
+								<img src="img/popup/1.png" alt="">
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</main>
 		@@include('html/_footer.htm',{})
