--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -19,8 +19,8 @@
 					<span></span>
 				</div>
 				<nav class="menu__body">
-					<ul class="menu__list">
-						<li data-spollers>
+					<ul class="menu__list" data-spollers data-one-spoller>
+						<li>
 							<span class="menu__link drop text-20" data-spoller>Клуб</span>
 							<div class="submenu">
 								<a href="about.html" class="submenu__link text-20">О клубе</a>
@@ -28,14 +28,14 @@
 								<a href="rukovodstvo.html" class="submenu__link text-20">Руководство</a>
 							</div>
 						</li>
-						<li data-spollers>
+						<li>
 							<span class="menu__link drop text-20" data-spoller>Команды</span>
 							<div class="submenu">
 								<a href="kvant.html" class="submenu__link text-20">КВАНТ</a>
 								<a href="trener.html" class="submenu__link text-20">Тренерский состав</a>
 							</div>
 						</li>
-						<li data-spollers>
+						<li>
 							<span class="menu__link drop text-20" data-spoller>Болельщику</span>
 							<div class="submenu">
 								<a href="games.html" class="submenu__link text-20">Расписание игр</a>
