--- a/src/contacts.html
+++ b/src/contacts.html
@@ -104,6 +104,8 @@
 					</div>
 					<div class="contacts__right">
 						<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/967/obninsk/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Обнинск</a><a href="https://yandex.ru/maps/967/obninsk/house/ulitsa_shatskogo_1a/Z08YcAdhQUcOQFtvfXx4cnVrbA==/?ll=36.601829%2C55.093988&utm_medium=mapframe&utm_source=maps&z=17" style="color:#eee;font-size:12px;position:absolute;top:14px;">Улица Шацкого, 1А на карте Обнинска — Яндекс Карты</a><iframe src="https://yandex.ru/map-widget/v1/?ll=36.601829%2C55.093988&mode=whatshere&whatshere%5Bpoint%5D=36.601829%2C55.093988&whatshere%5Bzoom%5D=17&z=17" width="560" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+						<img src="img/contacts/map.png" alt="">
+						<img src="img/contacts/marker.png" alt="">
 					</div>
 				</div>
 			</div>
