--- a/src/home.html
+++ b/src/home.html
@@ -261,7 +261,193 @@
 						<h2>Турнирная таблица</h2>
 					</div>
 					<div class="table__body body">
-						<img src="img/table/table.png" alt="">
+						<div class="table__body-top text-20 black">
+							<div class="table__body-item">
+							</div>
+							<div class="table__body-item">
+							</div>
+							<div class="table__body-item">
+								Клуб
+							</div>
+							<div class="table__body-item">
+								и
+							</div>
+							<div class="table__body-item">
+								в
+							</div>
+							<div class="table__body-item">
+								н
+							</div>
+							<div class="table__body-item">
+								п
+							</div>
+							<div class="table__body-item">
+								м
+							</div>
+							<div class="table__body-item">
+								о
+							</div>
+							<div class="table__body-item">
+							</div>
+						</div>
+						<div class="table__body-bottom text-24">
+							<div class="table__body-line">
+								<div class="table__body-item">
+									1
+								</div>
+								<div class="table__body-item -ibg_container">
+									<img src="img/table/1.png" alt="">
+								</div>
+								<div class="table__body-item">
+									Знамя
+								</div>
+								<div class="table__body-item">
+									22
+								</div>
+								<div class="table__body-item">
+									13
+								</div>
+								<div class="table__body-item">
+									3
+								</div>
+								<div class="table__body-item">
+									6
+								</div>
+								<div class="table__body-item">
+									41-25 (16)
+								</div>
+								<div class="table__body-item">
+									42
+								</div>
+								<div class="table__body-item">
+									<div class="table__body-blocks text-20 bold">
+										<span class="win">В</span>
+										<span class="loss">П</span>
+										<span class="loss">П</span>
+										<span class="draw">Н</span>
+										<span class="win">В</span>
+										<span class="win">В</span>
+									</div>
+								</div>
+							</div>
+							<div class="table__body-line">
+								<div class="table__body-item">
+									2
+								</div>
+								<div class="table__body-item -ibg_container">
+									<img src="img/table/2.png" alt="">
+								</div>
+								<div class="table__body-item">
+									Знамя
+								</div>
+								<div class="table__body-item">
+									22
+								</div>
+								<div class="table__body-item">
+									13
+								</div>
+								<div class="table__body-item">
+									3
+								</div>
+								<div class="table__body-item">
+									6
+								</div>
+								<div class="table__body-item">
+									41-25 (16)
+								</div>
+								<div class="table__body-item">
+									42
+								</div>
+								<div class="table__body-item">
+									<div class="table__body-blocks text-20 bold">
+										<span class="win">В</span>
+										<span class="loss">П</span>
+										<span class="loss">П</span>
+										<span class="draw">Н</span>
+										<span class="win">В</span>
+										<span class="win">В</span>
+									</div>
+								</div>
+							</div>
+							<div class="table__body-line active">
+								<div class="table__body-item">
+									3
+								</div>
+								<div class="table__body-item -ibg_container">
+									<img src="img/table/1.png" alt="">
+								</div>
+								<div class="table__body-item">
+									Знамя
+								</div>
+								<div class="table__body-item">
+									22
+								</div>
+								<div class="table__body-item">
+									13
+								</div>
+								<div class="table__body-item">
+									3
+								</div>
+								<div class="table__body-item">
+									6
+								</div>
+								<div class="table__body-item">
+									41-25 (16)
+								</div>
+								<div class="table__body-item">
+									42
+								</div>
+								<div class="table__body-item">
+									<div class="table__body-blocks text-20 bold">
+										<span class="win">В</span>
+										<span class="loss">П</span>
+										<span class="loss">П</span>
+										<span class="draw">Н</span>
+										<span class="win">В</span>
+										<span class="win">В</span>
+									</div>
+								</div>
+							</div>
+							<div class="table__body-line">
+								<div class="table__body-item">
+									4
+								</div>
+								<div class="table__body-item -ibg_container">
+									<img src="img/table/2.png" alt="">
+								</div>
+								<div class="table__body-item">
+									Знамя
+								</div>
+								<div class="table__body-item">
+									22
+								</div>
+								<div class="table__body-item">
+									13
+								</div>
+								<div class="table__body-item">
+									3
+								</div>
+								<div class="table__body-item">
+									6
+								</div>
+								<div class="table__body-item">
+									41-25 (16)
+								</div>
+								<div class="table__body-item">
+									42
+								</div>
+								<div class="table__body-item">
+									<div class="table__body-blocks text-20 bold">
+										<span class="win">В</span>
+										<span class="loss">П</span>
+										<span class="loss">П</span>
+										<span class="draw">Н</span>
+										<span class="win">В</span>
+										<span class="win">В</span>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
@@ -375,7 +561,161 @@
 									</div>
 								</div>
 								<div class="popup__players-bottom">
-									<img src="img/popup/1.png" alt="">
+									<div class="popup__table-body">
+										<div class="popup__table-top">
+												<div class="table__body-item">
+													Тур
+												</div>
+												<div class="table__body-item">
+													Дата
+												</div>
+												<div class="table__body-item">
+													Матч
+												</div>
+												<div class="table__body-item">
+													Счет
+												</div>
+												<div class="table__body-item">
+													Ст
+												</div>
+												<div class="table__body-item">
+													БЗ
+												</div>
+												<div class="table__body-item">
+													ВЗ
+												</div>
+												<div class="table__body-item">
+													Зап
+												</div>
+												<div class="table__body-item">
+													Мин
+												</div>
+												<div class="table__body-item red">
+													<span>Г (П)</span>
+													<span>Ж</span>
+													<span>2Ж</span>
+													<span>К</span>
+												</div>
+										</div>
+										<div class="popup__table-wrapper">
+											<div class="popup__table-line">
+													<div class="table__body-item">
+														12-й тур
+													</div>
+													<div class="table__body-item">
+														10.06.2023 10:00
+													</div>
+													<div class="table__body-item">
+														Знамя - Квант
+													</div>
+													<div class="table__body-item">
+														5:1
+													</div>
+													<div class="table__body-item">
+														0
+													</div>
+													<div class="table__body-item">
+														0
+													</div>
+													<div class="table__body-item">
+														1
+													</div>
+													<div class="table__body-item">
+														0
+													</div>
+													<div class="table__body-item">
+														69-90
+													</div>
+													<div class="table__body-item red">
+														<span>0 (0)</span>
+														<span>0</span>
+														<span>0</span>
+														<span>0</span>
+													</div>
+											</div>
+											<div class="popup__table-line">
+												<div class="table__body-item">
+													12-й тур
+												</div>
+												<div class="table__body-item">
+													10.06.2023 10:00
+												</div>
+												<div class="table__body-item">
+													Знамя - Квант
+												</div>
+												<div class="table__body-item">
+													5:1
+												</div>
+												<div class="table__body-item">
+													0
+												</div>
+												<div class="table__body-item">
+													0
+												</div>
+												<div class="table__body-item">
+													1
+												</div>
+												<div class="table__body-item">
+													0
+												</div>
+												<div class="table__body-item">
+													69-90
+												</div>
+												<div class="table__body-item red">
+													<span>0 (0)</span>
+													<span>0</span>
+													<span>0</span>
+													<span>0</span>
+												</div>
+										</div>
+										<div class="popup__table-line">
+											<div class="table__body-item">
+												12-й тур
+											</div>
+											<div class="table__body-item">
+												10.06.2023 10:00
+											</div>
+											<div class="table__body-item">
+												Знамя - Квант
+											</div>
+											<div class="table__body-item">
+												5:1
+											</div>
+											<div class="table__body-item">
+												0
+											</div>
+											<div class="table__body-item">
+												0
+											</div>
+											<div class="table__body-item">
+												1
+											</div>
+											<div class="table__body-item">
+												0
+											</div>
+											<div class="table__body-item">
+												69-90
+											</div>
+											<div class="table__body-item red">
+												<span>0 (0)</span>
+												<span>0</span>
+												<span>0</span>
+												<span>0</span>
+											</div>
+									</div>
+										</div>
+										<div class="popup__table-bottom">
+											<div class="popup__table-bottom-left">
+												Всего: 9 матчей, из них 0 в стартовом составе. 21 игровая минута
+											</div>
+											<div class="popup__table-bottom-right red">
+												<span>0 (0)</span>
+												<span>0</span>
+												<span>0</span>
+												<span>0</span>
+											</div>
+										</div>
+									</div>
 								</div>
 							</div>
 						</div>
