--- a/src/news.html
+++ b/src/news.html
@@ -92,30 +92,30 @@
 				<div class="news__title">
 					<h3>Галерея</h3>
 				</div>
-				<div class="news__gallery">
+				<div class="news__gallery" data-gallery>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/6.png" alt="">
+						<img src="img/news/6.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/7.png" alt="">
+						<img src="img/news/7.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/8.png" alt="">
+						<img src="img/news/8.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/9.png" alt="">
+						<img src="img/news/9.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/6.png" alt="">
+						<img src="img/news/6.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/7.png" alt="">
+						<img src="img/news/7.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/8.png" alt="">
+						<img src="img/news/8.png" alt="" data-gallery-item>
 					</div>
 					<div class="news__gallery-item -ibg">
-						<img src="img/news/9.png" alt="">
+						<img src="img/news/9.png" alt="" data-gallery-item>
 					</div>
 				</div>
 				<div class="news__video">
