--- a/src/turnir.html
+++ b/src/turnir.html
@@ -15,7 +15,195 @@
 				<div class="turnir__text text-20">
 					<p>С другой стороны, консультация с широким активом, а также свежий взгляд на привычные вещи — безусловно открывает новые горизонты для модели развития. А ещё базовые сценарии поведения пользователей являются только методом политического участия и в равной степени предоставлены сами себе. В частности, повышение уровня гражданского сознания, в своём классическом представлении, допускает внедрение глубокомысленных рассуждений.</p>
 				</div>
-				<img src="img/table/table.png" alt="">
+				<div class="table__body">
+					<div class="table__body-top text-20 black">
+						<div class="table__body-item">
+						</div>
+						<div class="table__body-item">
+						</div>
+						<div class="table__body-item">
+							Клуб
+						</div>
+						<div class="table__body-item">
+							и
+						</div>
+						<div class="table__body-item">
+							в
+						</div>
+						<div class="table__body-item">
+							н
+						</div>
+						<div class="table__body-item">
+							п
+						</div>
+						<div class="table__body-item">
+							м
+						</div>
+						<div class="table__body-item">
+							о
+						</div>
+						<div class="table__body-item">
+						</div>
+					</div>
+					<div class="table__body-bottom text-24">
+						<div class="table__body-line">
+							<div class="table__body-item">
+								1
+							</div>
+							<div class="table__body-item -ibg_container">
+								<img src="img/table/1.png" alt="">
+							</div>
+							<div class="table__body-item">
+								Знамя
+							</div>
+							<div class="table__body-item">
+								22
+							</div>
+							<div class="table__body-item">
+								13
+							</div>
+							<div class="table__body-item">
+								3
+							</div>
+							<div class="table__body-item">
+								6
+							</div>
+							<div class="table__body-item">
+								41-25 (16)
+							</div>
+							<div class="table__body-item">
+								42
+							</div>
+							<div class="table__body-item">
+								<div class="table__body-blocks text-20 bold">
+									<span class="win">В</span>
+									<span class="loss">П</span>
+									<span class="loss">П</span>
+									<span class="draw">Н</span>
+									<span class="win">В</span>
+									<span class="win">В</span>
+								</div>
+							</div>
+						</div>
+						<div class="table__body-line">
+							<div class="table__body-item">
+								2
+							</div>
+							<div class="table__body-item -ibg_container">
+								<img src="img/table/2.png" alt="">
+							</div>
+							<div class="table__body-item">
+								Знамя
+							</div>
+							<div class="table__body-item">
+								22
+							</div>
+							<div class="table__body-item">
+								13
+							</div>
+							<div class="table__body-item">
+								3
+							</div>
+							<div class="table__body-item">
+								6
+							</div>
+							<div class="table__body-item">
+								41-25 (16)
+							</div>
+							<div class="table__body-item">
+								42
+							</div>
+							<div class="table__body-item">
+								<div class="table__body-blocks text-20 bold">
+									<span class="win">В</span>
+									<span class="loss">П</span>
+									<span class="loss">П</span>
+									<span class="draw">Н</span>
+									<span class="win">В</span>
+									<span class="win">В</span>
+								</div>
+							</div>
+						</div>
+						<div class="table__body-line active">
+							<div class="table__body-item">
+								3
+							</div>
+							<div class="table__body-item -ibg_container">
+								<img src="img/table/1.png" alt="">
+							</div>
+							<div class="table__body-item">
+								Знамя
+							</div>
+							<div class="table__body-item">
+								22
+							</div>
+							<div class="table__body-item">
+								13
+							</div>
+							<div class="table__body-item">
+								3
+							</div>
+							<div class="table__body-item">
+								6
+							</div>
+							<div class="table__body-item">
+								41-25 (16)
+							</div>
+							<div class="table__body-item">
+								42
+							</div>
+							<div class="table__body-item">
+								<div class="table__body-blocks text-20 bold">
+									<span class="win">В</span>
+									<span class="loss">П</span>
+									<span class="loss">П</span>
+									<span class="draw">Н</span>
+									<span class="win">В</span>
+									<span class="win">В</span>
+								</div>
+							</div>
+						</div>
+						<div class="table__body-line">
+							<div class="table__body-item">
+								4
+							</div>
+							<div class="table__body-item -ibg_container">
+								<img src="img/table/2.png" alt="">
+							</div>
+							<div class="table__body-item">
+								Знамя
+							</div>
+							<div class="table__body-item">
+								22
+							</div>
+							<div class="table__body-item">
+								13
+							</div>
+							<div class="table__body-item">
+								3
+							</div>
+							<div class="table__body-item">
+								6
+							</div>
+							<div class="table__body-item">
+								41-25 (16)
+							</div>
+							<div class="table__body-item">
+								42
+							</div>
+							<div class="table__body-item">
+								<div class="table__body-blocks text-20 bold">
+									<span class="win">В</span>
+									<span class="loss">П</span>
+									<span class="loss">П</span>
+									<span class="draw">Н</span>
+									<span class="win">В</span>
+									<span class="win">В</span>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</main>
 		@@include('html/_footer.htm',{})
